test/visibility/import/rename/badNewName.good
badNewName.chpl:5: error: incorrect expression in 'import' list rename, identifier expected
